# LearningC

./: .gitignore  a.out  hello.c  remove_build_file.py  sort_lib  sort_lib.c  sort_lib.h  sprintf_sscanf.c  test.c  test_sort_lib.c
100Practice/: binary_and_decimal.c  binary_search.c  counter_with_atomics.c  counter_with_mutex.c  counter_with_spinlock.c  exchangevalue.c  factorial.c  is_even.c  is_leap_year.c  is_palindrome.c  is_prime.c  nineninemultiply.c  print_diamond.c  print_grade.c  print_prime_number.c  produce_rabbit.c  quick_sort.c  sizeoffloat.c
21st_Century_C/ch01/: compile_tricks.txt  env.c  erf.c  gsl_erf.c  unified.c
21st_Century_C/ch02/: dict_test.c  glist.c
21st_Century_C/ch03/: backup.sh  linecount.sh
21st_Century_C/ch05/: size_t.c
21st_Century_C/ch06/: cpstruct.c  fibo.c
21st_Century_C/ch11/: keyval.c  keyval.h
C-Primer-Plus/ch01/: arrayprimer.c  celsiustest.c  constant.c  countall.c  countchar.c  countlines.c  countwords.c  fahrenheit.c  fahrenheitfloat.c  getchar.c  many.c  power.c  ssi.sql
C-Primer-Plus/ch03/: showf_pt.c  typesize.c
C-Primer-Plus/ch04/: defines.c  praise1.c  talkback.c
C-Primer-Plus/ch05/: format.c  shoes1.c  temperatures.c
DS_C/: .project  kdtree.c  main.c
DS_C/ch05/hash/: CMakeLists.txt  testhash.c
DS_C/ch05/hash/hashquad/: CMakeLists.txt  hashquad.c
DS_C/ch05/hash/hashsep/: CMakeLists.txt  hashsep.c
cpp_primer_plus_practice/: .clang-format
game/Tetris/: CMakeLists.txt  cmake_install.cmake  main.c  tetris.c  tetris.h
game/Tetris/include/: tetris.h
game/Tetris/src/: main.c  tetris.c
(+313 files in other folders)
